Adds PageObject structure