@@ -1,4 +1,3 @@
-
 plugins {
     id 'java-library'
 }
@@ -7,11 +6,8 @@ repositories {
     mavenCentral()
 }
 
-def selenideVersion = "5.19.8",
-    junitVersion = "5.7.1"
-
 dependencies {
-    testImplementation "com.codeborne:selenide:5.19.0"
+    testImplementation "com.codeborne:selenide:5.20.1"
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.1"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.1"
     compileJava.options.encoding = "UTF-8"
@@ -19,22 +15,11 @@ dependencies {
     implementation "com.github.javafaker:javafaker:1.0.2"
 }
 
-tasks.withType(JavaCompile) {
-    options.encoding = 'utf8'
-}
-
 test {
     useJUnitPlatform()
 }
 
-task one_test(type: Test) {
-    useJUnitPlatform() {
-        includeTags 'one'
-    }
-}
-
-task without_one_test(type: Test) {
-    useJUnitPlatform() {
-        excludeTags 'one'
-    }
+tasks.withType(Test) {
+    useJUnitPlatform()
+    jvmArgs '--enable-preview'
 }
